fix password components align

--- a/src/input/password/PasswordTextInput.css
+++ b/src/input/password/PasswordTextInput.css
@@ -55,21 +55,20 @@
 }
 
 .Password_Text_Input_Suffix_Button {
-    position: relative;
-    margin-top: -50px;
-    margin-right: 8px;
-    margin-left: auto;
-    height: 48px;
-    width: 48px;
+    position: absolute;
+    height: 46px;
+    width: 46px;
+    top: 3px;
+    right: 8px;
     background: white;
+    display: block;
+    justify-content: center;
+    align-items: center;
     border: none;
     cursor: pointer;
 }
 
 .Password_Text_Input_Suffix_Icon {
-    position: absolute;
-    left: 12px;
-    top: 12px;
     height: 24px;
     width: 24px;
 }
@@ -77,7 +76,7 @@
 .Password_Text_Input_Suffix_Icon_Line {
     position: absolute;
     left: 24px;
-    top: 12px;
+    top: 10px;
     width: 1px;
     height: 24px;
     background: #333333;
@@ -96,22 +95,13 @@
     }
 
     .Password_Text_Input_Suffix_Button {
-        position: relative;
-        margin-top: -46px;
-        margin-right: 8px;
-        margin-left: auto;
-        height: 40px;
-        width: 40px;
-        border: none;
-        cursor: pointer;
-    }
-
-    .Password_Text_Input_Suffix_Icon {
-        top: 10px;
+        height: 42px;
+        width: 42px;
     }
 
     .Password_Text_Input_Suffix_Icon_Line {
-        top: 10px;
+        left: 22px;
+        top: 8px;
     }
 }
 
@@ -127,7 +117,12 @@
     }
 
     .Password_Text_Input_Suffix_Button {
-        position: relative;
-        margin-top: -48px;
+        height: 38px;
+        width: 38px;
+    }
+
+    .Password_Text_Input_Suffix_Icon_Line {
+        left: 20px;
+        top: 6px;
     }
 }
